Better use of autoboxing.